# MicroFactual

./: .buildinfo  .buildinfo.bak  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.in  ML_package.R  Makefile  README.md  RELEASING.md  architecture_current.md  counterfactuals.html  genindex.html  hello.py  index.html  main.py  modules.html  objects.inv  preprocessing.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  test_dataset.py  test_main.py  user_guide.html
.doctrees/: counterfactuals.doctree  environment.pickle  index.doctree  modules.doctree  preprocessing.doctree  user_guide.doctree
.github/workflows/: ci.yml  docs.yml  release.yml
Dataset/: README.md
NSCLC_Dataset/: abundance_nsclc_discovery_renamed.tsv  abundance_nsclc_discovery_renamed_clean.tsv  abundance_nsclc_discovery_renamed_clean_relab.tsv  metadata_nsclc_discovery_renamed.tsv
NSCLC_Dataset/Clean_Dataset/: metadata_nsclc_discovery_renamed_clean.tsv
NSCLC_Dataset/Raw_Dataset/: abundance_nsclc_discovery_renamed.tsv
Original_Dataset/: meta_Zeller_2014.tsv
R_scripts/: ML_package.R
_sources/: counterfactuals.rst.txt  index.rst.txt  modules.rst.txt  user_guide.rst.txt
datasets/: README.md  abundance_crc.txt  metadata_crc.txt
docs/: RELEASE_PLAN.md  architecture_current.md  architecture_proposed.md  architecture_refined_simple.md  conf.py  counterfactuals.rst  development_guidelines.md  index.rst  modules.rst  preprocessing.rst
docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  py-modindex.html  search.html  searchindex.js  user_guide.html
docs/_build/html/.doctrees/: environment.pickle  index.doctree  modules.doctree  user_guide.doctree
docs/_build/html/_sources/: user_guide.rst.txt
notebooks/: 00_End_to_End_Feature_Tour.ipynb  01_Quickstart_Classification.ipynb  02_Modular_Pipeline_Builders.ipynb  03_Interactive_Dashboard.ipynb  04_Explainability_Counterfactuals.ipynb  README.md  counterfactuals_example.ipynb  counterfactuals_example.py  counterfactuals_example_viz.ipynb  explainerboard_visualisation.ipynb  ml_example.py  test_counterfactuals.ipynb  test_counterfactuals.py  test_ml.py
notebooks/dice_cf_outputs/: counterfactual_comparison_long.csv  feature_summary.csv  sample_distance_summary.csv
src/microbiome_ml/: data_processing.py  main.py  modeling.py  utils.py  visualisation.py
src/microfactual/: __init__.py  data_processing.py  main.py  modeling.py  utils.py  visualisation.py
src/microfactual/core/: __init__.py  base.py  dataset.py  processing.py
src/microfactual/explainability/: __init__.py  base.py  counterfactuals.py  plausibility.py  result.py
src/microfactual/models/: __init__.py  classifiers.py  training.py
src/microfactual/preprocessing/: __init__.py  transforms.py
src/microfactual/visualization/: __init__.py  counterfactual_plots.py  dashboard.py  exploration.py  plots.py  roc_io.py
test/: conftest.py  test_cf_plausibility.py  test_classifiers.py  test_core_dataset.py  test_dashboard.py  test_data_processing.py  test_explainability.py  test_exploration.py  test_main.py  test_modelling.py  test_preprocessing_transforms.py  test_utils.py  test_visualization.py
