[project]
name = "microfactual"
version = "0.2.0"
description = "Interpretable, sklearn-native counterfactual explanations for microbiome classification"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Simeon Hebrew", email = "simeonhebrew@gmail.com"},
    {name = "Lawrence Adu-Gyamfi", email = "lagyamfi@outlook.com"}
]
maintainers = [
    {name = "Simeon Hebrew", email = "simeonhebrew@gmail.com"},
    {name = "Lawrence Adu-Gyamfi", email = "lagyamfi@outlook.com"}
]
keywords = [
    "microbiome",
    "machine-learning",
    "bioinformatics",
    "metagenomics",
    "classification",
    "counterfactual-explanations",
    "explainable-ai",
    "interpretability"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "skore>=0.10.0",
]

[project.optional-dependencies]
# Heavy interpretability stack — install with: pip install microfactual[explainability]
explainability = [
    "dice-ml>=0.9",
    "explainerdashboard>=0.5.1",
]

[dependency-groups]
dev = [
    "ruff>=0.11.6",
    "ipykernel>=6.29.5",
    "pytest>=8.3.5",
    "pytest-cov>=6.2.1",
    "pre-commit>=3.5.0",
    "mypy>=1.11.1",
    "pandas-stubs>=2.0.0",
]
docs = [
    "sphinx>=8.1.3",
    "sphinx-autodoc-typehints>=3.0.1",
    "sphinx-rtd-theme>=3.0.2",
    "sphinxcontrib-mermaid>=2.0.0",
]

[project.scripts]
microfactual = "microfactual.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/microfactual"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
exclude = [".git", ".venv", "env_microbiome", "output", "__pycache__", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "A", "C90"]
ignore = [
    "E501",  # line length handled by the formatter
    # ML naming conventions: X (features) / y (targets) are standard.
    "N803",
    "N806",
    "N802",
    "D107",  # __init__ is documented via the class docstring
    # Resolve mutually-exclusive pydocstyle rules (keep D211 + D212):
    "D203",
    "D213",
]

[tool.ruff.lint.per-file-ignores]
# Deprecated shim modules intentionally emit a DeprecationWarning before imports.
"src/microfactual/visualisation.py" = ["E402"]
"src/microfactual/modeling.py" = ["E402"]
"src/microfactual/data_processing.py" = ["E402"]
# Tests: docstring coverage not required; matplotlib backend must be set
# pre-import; broad `pytest.raises(Exception)` assertions are acceptable.
"test/*.py" = ["D", "E402", "B017"]

[tool.ruff.format]
# Use ruff's built-in formatter for consistent code style
docstring-code-format = true
quote-style = "preserve"
indent-style = "space"
line-ending = "auto"
